@@ -15,3 +15,11 @@ SEARCH_BAR_CONTENT = Search
 SEARCH_BAR_BUTTON_NAME = Search
 AUTHOR_LABEL = Author
 LOGO_AVAILABLE = Logo is under 'Licence Art Libre' conditions by ECK Ines:
+JSKOMMENT_PSEUDO = Your nickname
+JSKOMMENT_ADD_COMMENT = Leave a comment
+JSKOMMENT_COMMENTS = Comment(s)
+JSKOMMENT_POWERED = Commenting area powered by
+JSKOMMENT_SUBMIT = Submit
+JSKOMMENT_YOUR = Your comment
+JSKOMMENT_LABEL = Nickname: 
+JSKOMMENT_CAPTCHA_ERROR = error in API usage
