@@ -15,3 +15,11 @@ SEARCH_BAR_CONTENT = Recherche
 SEARCH_BAR_BUTTON_NAME = Rechercher
 AUTHOR_LABEL = Rédacteur
 LOGO_AVAILABLE = Le logo est disponible sous 'Licence Art Libre' par Ines ECK : 
+JSKOMMENT_PSEUDO = Votre pseudonyme
+JSKOMMENT_ADD_COMMENT = Laisser un commentaire
+JSKOMMENT_COMMENTS = Commentaire(s)
+JSKOMMENT_POWERED = Système de commentaire propulsé par
+JSKOMMENT_SUBMIT = Soumettre
+JSKOMMENT_YOUR = Votre commentaire
+JSKOMMENT_LABEL = Pseudonyme : 
+JSKOMMENT_CAPTCHA_ERROR = erreur d\'utilisation de l\'API
