@@ -1,5 +1,6 @@
 Current (0.2-dev)
 	- Add jskomment as optional comment system
+	- Permit to customize jskomment comment system content
 
 Version 0.1.1 (release 2013-01-17)
 	- Permit user to choose page ' suffix
